hack/test-values/expected-results/dnsconfig.yaml
---
# Source: app/templates/pvc.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: my-data
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1G
---
# Source: app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-app-svc-web
  labels:
    app.kubernetes.io/name: release-name-app-svc-web
    helm.sh/chart: app-0.13.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: release-name
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
---
# Source: app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-app
  labels:
    app.kubernetes.io/name: app
    helm.sh/chart: app-0.13.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
        app.kubernetes.io/instance: release-name
    spec:
      
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 10.202.10.202
        - 10.202.10.102
      securityContext:
        {}
      automountServiceAccountToken: false
      hostNetwork: false
      containers:
        - name: app
          securityContext:
            {}
          image: "nginx:1.21.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: my-data-volume
              subPath:  data
            - mountPath: /var/lib/logs
              name: my-data-volume
              subPath:  logs
          resources:
            {}
      volumes:
        - name: my-data-volume
          persistentVolumeClaim:
            claimName: my-data
---
# Source: app/templates/rbac.yaml
#RBAC and service account
