hack/test-values/expected-results/secret-file-sts.yaml
---
# Source: app/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-app
  labels:
    app.kubernetes.io/name: app
    helm.sh/chart: app-0.11.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: release-name
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      automountServiceAccountToken: false
      hostNetwork: false
      containers:
        - name: app
          securityContext:
            {}
          image: "aahemm/podinfo:v0.12.0"
          imagePullPolicy: IfNotPresent
          ports:
          volumeMounts:
            - mountPath: /test-secret
              name: test-secret-volume
            - mountPath: /etc/myfile.conf
              name: test-secret-2-volume
              subPath: myfile.conf
          resources:
            {}
      volumes:
        - name: test-secret-volume
          secret:
            secretName: test-secret
        - name: test-secret-2-volume
          secret:
            secretName: test-secret-2
---
# Source: app/templates/rbac.yaml
#RBAC and service account
