hack/test-values/expected-results/sts.yaml
---
# Source: app/templates/pvc.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: my-data
  annotations:
    test.annotation/key1: value1
    test.annotation/key2: value2
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1G
---
# Source: app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-app
  labels:
    app.kubernetes.io/name: app
    helm.sh/chart: app-VERSION
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
        app.kubernetes.io/instance: release-name
    spec:      
      automountServiceAccountToken: false
      hostNetwork: false
      containers:
        - name: app
          image: "myrepo.com/my-image:v1.2.3"
          imagePullPolicy: IfNotPresent
          ports:
          volumeMounts:
            - mountPath: /data
              name: my-data-volume
              subPath:  data
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
      volumes:
        - name: my-data-volume
          persistentVolumeClaim:
            claimName: my-data
